fixing swagger.js
