# controllers/nationalDexController.js
@@ -4,9 +4,13 @@ const ObjectId = require('mongodb').ObjectId;
 // GET all National Dex cards
 const getAll = async (req, res) => {
   try {
-    const result = await mongodb.getDatabase().db().collection('NationalDexCards').find();
-    const dex = await result.toArray();
-    res.status(200).json(dex);
+    const result = await mongodb.getDatabase()
+      .db()
+      .collection('NationalDexCards')
+      .find({})
+      .toArray();
+
+    res.status(200).json(result);
   } catch (err) {
     res.status(500).json({ error: err.message });
   }
@@ -16,14 +20,17 @@ const getAll = async (req, res) => {
 const getSingle = async (req, res) => {
   try {
     const dexId = new ObjectId(req.params.id);
-    const result = await mongodb.getDatabase().db().collection('NationalDexCards').find({ _id: dexId });
-    const dex = await result.toArray();
 
-    if (!dex[0]) {
+    const result = await mongodb.getDatabase()
+      .db()
+      .collection('NationalDexCards')
+      .findOne({ _id: dexId });
+
+    if (!result) {
       return res.status(404).json({ message: 'Dex entry not found' });
     }
 
-    res.status(200).json(dex[0]);
+    res.status(200).json(result);
   } catch (err) {
     res.status(500).json({ error: err.message });
   }
@@ -32,9 +39,20 @@ const getSingle = async (req, res) => {
 // CREATE National Dex card
 const createDex = async (req, res) => {
   try {
-    const dex = req.body;
+    const dex = {
+      name: req.body.name,
+      dexNumber: req.body.dexNumber,
+      type1: req.body.type1,
+      type2: req.body.type2,
+      region: req.body.region,
+      sprite: req.body.sprite,
+      description: req.body.description
+    };
 
-    const response = await mongodb.getDatabase().db().collection('NationalDexCards').insertOne(dex);
+    const response = await mongodb.getDatabase()
+      .db()
+      .collection('NationalDexCards')
+      .insertOne(dex);
 
     res.status(201).json(response);
   } catch (err) {
@@ -46,12 +64,21 @@ const createDex = async (req, res) => {
 const updateDex = async (req, res) => {
   try {
     const dexId = new ObjectId(req.params.id);
-    const dex = req.body;
 
-    const response = await mongodb.getDatabase().db().collection('NationalDexCards').updateOne(
-      { _id: dexId },
-      { $set: dex }
-    );
+    const dex = {
+      name: req.body.name,
+      dexNumber: req.body.dexNumber,
+      type1: req.body.type1,
+      type2: req.body.type2,
+      region: req.body.region,
+      sprite: req.body.sprite,
+      description: req.body.description
+    };
+
+    const response = await mongodb.getDatabase()
+      .db()
+      .collection('NationalDexCards')
+      .replaceOne({ _id: dexId }, dex);
 
     if (response.modifiedCount > 0) {
       return res.status(200).json(response);
@@ -67,7 +94,11 @@ const updateDex = async (req, res) => {
 const deleteDex = async (req, res) => {
   try {
     const dexId = new ObjectId(req.params.id);
-    const response = await mongodb.getDatabase().db().collection('NationalDexCards').deleteOne({ _id: dexId });
+
+    const response = await mongodb.getDatabase()
+      .db()
+      .collection('NationalDexCards')
+      .deleteOne({ _id: dexId });
 
     if (response.deletedCount > 0) {
       return res.status(200).json({ message: 'Dex entry deleted' });
