# routes/nationalDexRoutes.js
@@ -1,35 +1,93 @@
 const router = require('express').Router();
 const controller = require('../controllers/nationalDexController');
 
-router.get('/',
-    //#swagger.tags=['National Dex']
-    //#swagger.description='Get all National Dex entries'
-    controller.getAll
-);
+/*
+    #swagger.tags = ['National Dex Cards']
+    #swagger.summary = 'Get all National Dex cards'
+    #swagger.description = 'Returns all National Dex Pokémon cards from the database.'
+    #swagger.responses[200] = {
+        description: 'List of National Dex cards',
+        schema: {
+            type: 'array',
+            items: {
+                type: 'object',
+                properties: {
+                    _id: { type: 'string' },
+                    name: { type: 'string' },
+                    dexNumber: { type: 'integer' },
+                    type1: { type: 'string' },
+                    type2: { type: 'string' },
+                    region: { type: 'string' },
+                    sprite: { type: 'string' },
+                    description: { type: 'string' }
+                }
+            }
+        }
+    }
+*/
+router.get('/', controller.getAll);
 
-router.get('/:id',
-    //#swagger.tags=['National Dex']
-    //#swagger.description='Get a single National Dex entry'
-    controller.getSingle
-);
+/*
+    #swagger.tags = ['National Dex Cards']
+    #swagger.summary = 'Get a National Dex card by ID'
+    #swagger.description = 'Returns a single National Dex Pokémon card.'
+    #swagger.parameters['id'] = {
+        in: 'path',
+        description: 'MongoDB ObjectId of the card',
+        required: true,
+        type: 'string'
+    }
+    #swagger.responses[200] = {
+        description: 'National Dex card retrieved',
+        schema: {
+            type: 'object',
+            properties: {
+                _id: { type: 'string' },
+                name: { type: 'string' },
+                dexNumber: { type: 'integer' },
+                type1: { type: 'string' },
+                type2: { type: 'string' },
+                region: { type: 'string' },
+                sprite: { type: 'string' },
+                description: { type: 'string' }
+            }
+        }
+    }
+*/
+router.get('/:id', controller.getSingle);
 
-router.post('/',
-    //#swagger.tags=['National Dex']
-    //#swagger.description='Create a new National Dex entry'
-    controller.createDex
-);
+/*
+    #swagger.tags = ['National Dex Cards']
+    #swagger.summary = 'Create a new National Dex card'
+    #swagger.description = 'Adds a new National Dex Pokémon card to the database.'
+    #swagger.parameters['body'] = {
+        in: 'body',
+        required: true,
+        schema: {
+            name: 'Palkia',
+            dexNumber: 484,
+            type1: 'Water',
+            type2: 'Dragon',
+            region: 'Sinnoh',
+            sprite: 'https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/484.png',
+            description: 'It has the ability to distort space. It is said to live in a gap in the spatial dimension.'
+        }
+    }
+*/
+router.post('/', controller.createCard);
 
-router.put('/:id',
-    //#swagger.tags=['National Dex']
-    //#swagger.description='Update a National Dex entry'
-    controller.updateDex
-);
+/*
+    #swagger.tags = ['National Dex Cards']
+    #swagger.summary = 'Update a National Dex card'
+    #swagger.description = 'Updates an existing National Dex Pokémon card.'
+*/
+router.put('/:id', controller.updateCard);
 
-router.delete('/:id',
-    //#swagger.tags=['National Dex']
-    //#swagger.description='Delete a National Dex entry'
-    controller.deleteDex
-);
-
+/*
+    #swagger.tags = ['National Dex Cards']
+    #swagger.summary = 'Delete a National Dex card'
+    #swagger.description = 'Deletes a National Dex Pokémon card from the database.'
+*/
+router.delete('/:id', controller.deleteCard);
 
 module.exports = router;
